[vnext]
- Fixed bug where some header values were not accepted by the .NET HttpClient when a reverse proxy was used. An example is the `User-Agent` value `WordPress/6.2.2; http://localhost:8010` (https://github.com/dukeofharen/httplaceholder/pull/314).

[2023.6.30]
- Split form helper buttons into 4 separate buttons (https://github.com/dukeofharen/httplaceholder/pull/305).
- Updated the CodeMirror editor from 5 to 6 (https://github.com/dukeofharen/httplaceholder/pull/305).
- Added filter for variable handlers in the UI (https://github.com/dukeofharen/httplaceholder/pull/305).
- Only show "simple editor" button in UI if the stub is very large (https://github.com/dukeofharen/httplaceholder/pull/305).
- Build HttPlaceholder and all its dependencies in a Docker container (https://github.com/dukeofharen/httplaceholder/pull/305).
- Save binary request body as Base64 string (https://github.com/dukeofharen/httplaceholder/pull/306).
- Make it possible to download binary request body from the UI (https://github.com/dukeofharen/httplaceholder/pull/306).
- Render a posted image request body in the UI (https://github.com/dukeofharen/httplaceholder/pull/306).
- Render the response body in the UI the same way as the request body (https://github.com/dukeofharen/httplaceholder/pull/307).
- If a PDF is sent as request or returned as response, the PDF will be rendered in the UI (https://github.com/dukeofharen/httplaceholder/pull/307).
- Fixed requests bug: whenever the request parameters were not saved (may happen in some rare cases when HttPlaceholder is DDOS'ed), the API returned an HTTP 500 (https://github.com/dukeofharen/httplaceholder/pull/308).
- Added string / regex replacement response writer (https://github.com/dukeofharen/httplaceholder/pull/309).
- Added SignalR connection for stubs (https://github.com/dukeofharen/httplaceholder/pull/310).