@@ -1,5 +1,9 @@
 [vnext]
 - Fixed bug where some header values were not accepted by the .NET HttpClient when a reverse proxy was used. An example is the `User-Agent` value `WordPress/6.2.2; http://localhost:8010` (https://github.com/dukeofharen/httplaceholder/pull/314).
+- The self-signed certificate for HTTPS traffic has been replaced (https://github.com/dukeofharen/httplaceholder/pull/315).
+
+# BREAKING CHANGES
+- If you, for some reason, depend on the SSL certificate, you might need to do an update on your side.
 
 [2023.6.30]
 - Split form helper buttons into 4 separate buttons (https://github.com/dukeofharen/httplaceholder/pull/305).
